# supertux-meltdown

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  clickable.json
.github/workflows/: build.yml
docs/: index.md  mainpage.dox
mk/clickable/: manifest.json.in
mk/cmake/: FindSDL2_ttf.cmake
mk/emscripten/: build-physfs.sh  supertux-meltdown.html  template.html
mk/install/: stmeltdown.desktop
mk/linux/: supertux-meltdown.desktop
mk/tools/: check_code_quality.sh  make_appimage.sh  make_coverage.sh  make_documentation.sh  make_wasm.sh
mk/tools/code_quality/: check_80char.sh  check_args.sh  check_copyright.sh  check_doxyfile.sh  check_includes.sh  check_trailingnl.sh  check_trailingws.sh
mk/unix/: bash_completion.sh  stmeltdown.6
src/: main.cpp
src/editor/: editor_camera.cpp  editor_camera.hpp  editor_tilebox.cpp  editor_tilebox.hpp  editor_tilemap.cpp  editor_tilemap.hpp
src/game/: game_manager.cpp  game_manager.hpp  game_object_manager.cpp  game_object_manager.hpp  i_game_manager.hpp  resource_manager.cpp  resource_manager.hpp  scene_controller.cpp  scene_controller.hpp  scene_manager.cpp  scene_manager.hpp  tile_range.cpp  tile_range.hpp
src/objects/: object.cpp  object.hpp  tile_map.cpp  tile_map.hpp
src/scenes/: error_panel.cpp  error_panel.hpp  level_editor.cpp  level_editor.hpp  main_menu.cpp  main_menu.hpp  scene.cpp  scene.hpp  tilemap_editor.cpp  tilemap_editor.hpp
src/tests/: tests.cpp  tests.hpp
src/tests/api/: cli_options.cpp
src/tests/mock/scenes/: mock_scene.hpp
src/tests/unit/game/: scene_manager.cpp
src/tests/unit/util/: color.cpp  fs.cpp  log.cpp  math.cpp  rect.cpp  size.cpp  vector.cpp
src/transitions/: dissolve.cpp  dissolve.hpp  fade_to_black.cpp  fade_to_black.hpp  transition.cpp  transition.hpp
src/util/: color.cpp  color.hpp  fs.cpp  fs.hpp  log.cpp  log.hpp  math.cpp  math.hpp  rect.cpp  rect.hpp  size.cpp  size.hpp  vector.cpp  vector.hpp
src/video/: drawing_context.cpp  drawing_context.hpp  font.cpp  font.hpp  renderer.cpp  renderer.hpp  texture.cpp  texture.hpp  window.cpp  window.hpp
tests/: tests.cpp  tests.hpp
tests/api/: cli_options.cpp
tests/mock/scenes/: scene.cpp  scene.hpp
tests/unit/game/: game_manager.cpp
tests/unit/util/: color.cpp  log.cpp  math.cpp  size.cpp  vector.cpp
tools/code-quality/: 80chars.sh
